style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
    scroll-behavior: smooth;
}



body::-webkit-scrollbar {
    display: none;
    background: #f5f5f5;
    min-height: 100vh;
    min-width: 100vw;
    overflow-x: hidden;
    align-content: var(100vh, 100vw);
}

header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 30px 100px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100;
    background-color: #333333;
}



.section {
    min-height: 100vh;
    padding-top: 15px;
    position: relative;
    display: grid;
    justify-content: center;
    text-align: center;
    height: 100vh;
    scroll-behavior: none;
    font-size: 20pt;
    
}

.heading {
    font-size: 60pt;
    margin-top: 100px;
}

.section.one {
    color: #fff;
    background-color: #162938;
    margin: 100%, 1000px;
    overflow-x: hidden;
    padding-right: auto;
    
}

.section.three {
    color: #fff;
    background-color: #162938;
    margin: 100%, 1000px;
    overflow-x: hidden;
    flood-opacity: 50%;
}

.section.five {
    color: #fff;
    background-color: #162938;
    margin: 100%, 1000px;
    overflow-x: hidden;
    flood-opacity: 50%;
}

.section.six {
    min-height: 50vh;
    padding-top: 5px;
    position: relative;
    display: grid;
    justify-content: center;
    text-align: center;
    height: 65vh;
    scroll-behavior: smooth;
    font-size: 20pt;}



.logo {
    font-size: 2em;
    color: turquoise;
    pointer-events: none;
    
    
}


.navigation a {
    text-decoration: none;
    color: black;
    padding: 6px 15px;
    border-radius: 20px;
    margin: 0 10px;
    font-weight: 600;
    
}

.navigation a:hover, 
.navigation a.active {
    background: rgb(33, 32, 32);
    color: white;
}

.Shri {
    color: #fff;
    position: relative;
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    height: 100vh;
    scroll-behavior: smooth;
    background-color: rgba(116, 150, 175, 0.5);
    overflow: hidden;
}



  
#text {
    font-size: 5em;
}

.description {
    word-wrap: break-word;
}

.title {
    display: block;
}

.link {

    display:flex; 
    justify-content:center
}

.container a {
    text-decoration: none;
    background: rgb(33, 32, 32);
    color: white;
    padding: 6px 15px;
    border-radius: 20px;
    margin: 0 10px;
    font-weight: 600;
    
}

.container a:hover, 
.container a.active {
    background: #333333;
    color: white;
}

.text-card {
    height: 100%;
    overflow-y: auto;
  }

